--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>tdd-kata</groupId>
     <artifactId>tdd-kata</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.9.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
