Added a correct gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-.idea/.name
-.idea/compiler.xml
-.idea/misc.xml
-.idea/modules.xml
-tdd-katas.iml
-.idea/vcs.xml
-.idea/workspace.xml
+target
+test-output
+.gitignore
+.project
+.classpath
+.settings
+*.iml
+.idea
+bin
+client/package/packages
+*.sublime-project
+*.sublime-workspace
+
